--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ langchainhub = "^0.1.15"
 langchain-chroma = "^0.1.0"
 bs4 = "^0.0.2"
 pypdf = "^4.2.0"
+neuralprophet = "^0.8.0"
+meteostat = "^1.6.7"
 
 
 [tool.poetry.group.dev.dependencies]
