--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
-uvicorn = "^0.23.2"
+uvicorn = "0.23.2"
 langserve = {extras = ["server"], version = ">=0.0.30"}
 pydantic = "<2"
 langchain = "^0.1.20"
@@ -26,6 +26,8 @@ bs4 = "^0.0.2"
 pypdf = "^4.2.0"
 neuralprophet = "^0.8.0"
 meteostat = "^1.6.7"
+fastapi = "0.103.1"
+scikit-learn = "1.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
