--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ neuralprophet = "^0.8.0"
 meteostat = "^1.6.7"
 fastapi = "0.103.1"
 scikit-learn = "1.2.2"
+tensorflow = "2.16.1"
 
 
 [tool.poetry.group.dev.dependencies]
